Added Parallax image and cards

--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -10,6 +10,106 @@
         <div id="home-content" class="background-color">
 
 
+            <!-- SerenDPT Video -->
+            <!--<div>
+                <iframe id="intro-video" frameborder="0" allow="autoplay;" src="https://www.youtube.com/embed/cPL_98TpjUk?playlist=cPL_98TpjUk&amp;iv_load_policy=3&amp;enablejsapi=1&amp;disablekb=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;wmode=transparent&amp;origin=https%3A%2F%2Fserendpt.net&amp;widgetid=1"></iframe>
+            </div>-->
+
+            <!-- SerenDPT Video -->
+            <div class="intro">
+                <div class="intro-video">
+                    <iframe class="no-pointer" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="100%" src="https://www.youtube.com/embed/cPL_98TpjUk?playlist=cPL_98TpjUk&amp;iv_load_policy=3&amp;enablejsapi=1&amp;disablekb=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;wmode=transparent&amp;origin=https%3A%2F%2Fserendpt.net&amp;widgetid=1" style="min-height: 100vh; min-width: 100vh;"></iframe>
+                </div>
+                 <div class="intro-text">
+                     <h1>We are H3</h1>
+                     <h2>The third iteration of creators</h2>
+                </div>
+            </div>
+
+            <!-- SerenDPT Video -->
+            <!--<div class="section z1 rel">
+                <div data-vc-full-width="true" data-vc-full-width-init="true" data-vc-parallax-image="https://www.youtube.com/watch?v=cPL_98TpjUk" data-vc-video-bg="https://www.youtube.com/watch?v=cPL_98TpjUk" class="vc_row wpb_row vc_row-fluid vc_custom_1530607431919 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-flex vc_video-bg-container" style="position: relative; left: -54px; box-sizing: border-box; width: 1278px; padding-left: 54px; padding-right: 54px; min-height: 69.5122vh;">
+                    <div class="no-pointer">
+                        <iframe class="no-pointer" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="100%" src="https://www.youtube.com/embed/cPL_98TpjUk?playlist=cPL_98TpjUk&amp;iv_load_policy=3&amp;enablejsapi=1&amp;disablekb=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;wmode=transparent&amp;origin=https%3A%2F%2Fserendpt.net&amp;widgetid=1" id="widget2" style="max-width: 1000%; margin-left: 0px; margin-top: -131px; width: 1278px; height: 718.875px;"></iframe>
+                    </div>
+                </div>
+            </div>-->
+
+
+            <div class="section">
+                <h2>The Goal</h2>
+                <div class="fade-container row">
+                    <div class="fade-card col">
+                        <h4>100 Jobs</h4>
+                    </div>
+                    <div class="fade-card col">
+                        <h4>10 Companies</h4>
+                    </div>
+                    <div class="fade-card col">
+                        <h4>5 Years</h4>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="section">
+                <h2>Our Activity</h2>
+
+                <div class="fade-container row">
+                    <div class="fade-card col">
+                        <img class="card-image" src="img/SerenDPT.png" alt="">
+                        <h4>Blog 1</h4>
+                    </div>
+                    <div class="fade-card col">
+                        <img class="card-image" src="img/SerenDPT.png" alt="">
+                        <h4>Blog 2</h4>
+                    </div>
+                    <div class="fade-card col">
+                        <img class="card-image" src="img/SerenDPT.png" alt="">
+                        <h4>Blog 3</h4>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="section">
+                <h2>Upcoming Events</h2>
+
+                <div class="fade-container row">
+                    <div class="fade-card col">
+                        <img class="card-image" src="img/SerenDPT.png" alt="">
+                        <h4>DJ Dance Party</h4>
+                    </div>
+                    <div class="fade-card col">
+                        <img class="card-image" src="img/SerenDPT.png" alt="">
+                        <h4>WPI Project Presentations</h4>
+                    </div>
+                    <div class="fade-card col">
+                        <img class="card-image" src="img/SerenDPT.png" alt="">
+                        <h4>Farm-bot Hackathon</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="parallax">
+                <div class="parallax-image">
+                </div>
+                <div class="parallax-text">
+                    <h2>Our History</h2>
+                    <p>Discover our journey from the beginning</p>
+                    <a class="btn btn-light my-2 my-sm-0" href="history" role="button">Learn More</a>
+                </div>
+            </div>
+
+            <div class="section">
+                <h2>Spaces</h2>
+            </div>
+
+            <div class="section">
+                <h2>(final section, contact? sdpt?)</h2>
+            </div>
+
+
             <div id="carousel" class="carousel slide" data-ride="carousel">
 
                 <ol class="carousel-indicators">
@@ -70,11 +170,6 @@
             </div>
 
 
-            <div class="pane">
-                Welcome to H3
-            </div>
-
-            <img class="section z1 rel" src="img/SerenDPT.png" alt="">
 
             <div class="section z1 rel">
                 <h2 id="page-title">Events</h2>
@@ -89,42 +184,9 @@
 
             </div>
 
-            <div class="section z1 rel">
-                Upcoming Events
-
-                <div class="fade-container row">
-                    <div class="fade-card col">
-                        Event 1
-                    </div>
-                    <div class="fade-card col">
-                        Event 2
-                    </div>
-                    <div class="fade-card col">
-                        Event 3
-                    </div>
-                </div>
-            </div>
-            <br><br><br><br><br>
-            Space
-            <br><br><br><br><br>
-            <div class="section z1 rel">
-                Blog
-            </div>
-
-            <div class="section z1 rel">
-                Spaces
-            </div>
 
 
-            <div class="section z1 rel">
-                <!-- SerenDPT Video -->
-                <div data-vc-full-width="true" data-vc-full-width-init="true" data-vc-parallax-image="https://www.youtube.com/watch?v=cPL_98TpjUk" data-vc-video-bg="https://www.youtube.com/watch?v=cPL_98TpjUk" class="vc_row wpb_row vc_row-fluid vc_custom_1530607431919 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-flex vc_video-bg-container" style="position: relative; left: -54px; box-sizing: border-box; width: 1278px; padding-left: 54px; padding-right: 54px; min-height: 69.5122vh;">
-                    <div class="no-pointer">
-                        <iframe class="no-pointer" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="100%" height="100%" src="https://www.youtube.com/embed/cPL_98TpjUk?playlist=cPL_98TpjUk&amp;iv_load_policy=3&amp;enablejsapi=1&amp;disablekb=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;wmode=transparent&amp;origin=https%3A%2F%2Fserendpt.net&amp;widgetid=1" id="widget2" style="max-width: 1000%; margin-left: 0px; margin-top: -131px; width: 1278px; height: 718.875px;"></iframe>
-                    </div>
-                </div>
-            </div>
-
+<br><br><br><br><br>
 
 
         </div>
