--- a/themes/H3-Theme/static/scss/libs/_vars.scss
+++ b/themes/H3-Theme/static/scss/libs/_vars.scss
@@ -8,8 +8,8 @@ $font: (
 );
 
 $palette: (
-	bg:					#ECF0F1,
-	bg-alt:				#BDC3C7,
+	bg:					#FFFFFF,
+	bg-alt:				#ECF0F1,
 	fg:					#2C3E50,
 	fg-alt:				#3498DB,
 	border:				#2C3E50,
