--- a/themes/H3-Theme/static/scss/layout/home.scss
+++ b/themes/H3-Theme/static/scss/layout/home.scss
@@ -57,17 +57,16 @@
 
 
 // SCROLL MAGIC
-
-.fade-container {
-    padding: 50px;
-    background-color: #FAFAFA;
+.card-image {
+    width: 100%;
+    height: auto;
 }
 
 .fade-card {
     width: 25%;
     margin: 3%;
-    background-color: #aaaaaa;
-    border: 1px solid black;
+    padding: 0;
+    background-color: _palette(bg-alt);
     font-family: Helvetica;
 }
 .fade-image {
@@ -84,6 +83,8 @@
         transform: translateY(0);
     }
 }
+
+
 .rel {
     position: relative;
 }
@@ -98,12 +99,68 @@
 }
 
 .section {
-    z-index: 10;
-    background-color: white;
-    height: 100%;
-    color: black;
+    margin: 50px;
 }
 
 .pane {
     background-color: _palette(bg);
+}
+
+
+.intro {
+    .intro-video {
+        overflow: hidden;
+        filter: brightness(50%);
+    }
+    .intro-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 30px;
+        h3 {
+            font-size: 36pt;
+            font-weight: 500;
+        }
+        p {
+            font-size: 28pt;
+            font-weight: 300;
+        }
+    }
+    h1 {
+        color: white;
+        font-weight: 500;
+    }
+    h2 {
+        color: white;
+        font-weight: 300;
+    }
+}
+
+.parallax {
+    padding: 50px 0;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    .parallax-image {
+        background: url('../../img/Full Textile Factory.jpeg') no-repeat;
+        background-size: cover;
+        position: absolute;
+        width: 100%;
+        height: 140%;
+        top: 0;
+        z-index: 1;
+        opacity: 0.7;
+        filter: brightness(50%);
+    }
+    .parallax-text {
+        width: 90%;
+        margin: 0 auto;
+        max-width: 1140px;
+        position: relative;
+        z-index: 2;
+        h2, p {
+            color: white;
+        }
+    }
 }
