Attempted jquery-ui

--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -22,7 +22,9 @@
                 </div>
                  <div class="intro-text">
                      <h1>We are H3</h1>
-                     <h2>The third iteration of creators</h2>
+                     <h2 class="rotating-text">The third iteration of creators</h2>
+                     <h2 class="rotating-text">The second iteration of creators</h2>
+                     <h2 class="rotating-text">The first iteration of creators</h2>
                 </div>
             </div>
 
