--- a/public/scss/layout/_footer.scss
+++ b/public/scss/layout/_footer.scss
@@ -2,9 +2,10 @@
     margin: 0;
     padding: 40;
     background-color: #1a1a1a;
-    height: 50px;
     width: 100%;
     font-family: ('Source Sans Pro', Helvetica, sans-serif);
+    position: relative;
+    z-index: 999;
     p {
         font-size: 14;
     }
