--- a/public/scss/layout/home.scss
+++ b/public/scss/layout/home.scss
@@ -2,8 +2,39 @@
     text-align: center;
 
     #carousel {
-        height: 90%;
+        height: 100%;
         overflow: hidden;
+    }
+}
+
+.carousel-inner {
+    height: 100%;
+    width: auto;
+}
+.carousel-item {
+    height: 100%;
+    width: auto;
+}
+.tester3 {
+    height: 100%;
+    width: auto;
+    filter: brightness(50%);
+}
+
+.carousel-text {
+    position: absolute;
+    height: 60%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    h3 {
+        font-size: 36pt;
+        font-weight: 500;
+    }
+    p {
+        font-size: 28pt;
+        font-weight: 300;
     }
 }
 
@@ -22,4 +53,129 @@
 
 .no-pointer {
     pointer-events: none;
+}
+
+
+// SCROLL MAGIC
+.card-image {
+    width: 100%;
+    height: auto;
+}
+
+.fade-card {
+    width: 25%;
+    margin: 3%;
+    padding: 0;
+    background-color: _palette(bg-alt);
+    font-family: Helvetica;
+}
+.fade-image {
+    width: 25%;
+    margin: 3%;
+}
+
+.fade-container {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 2s ease-out;
+    &.fade-in {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+.rel {
+    position: relative;
+}
+.z0 {
+    z-index: 0;
+}
+.z1 {
+    z-index: 0;
+}
+.z2 {
+    z-index: 2;
+}
+
+.section {
+    margin: 50px;
+}
+
+.pane {
+    background-color: _palette(bg);
+}
+
+
+.intro {
+    .intro-video {
+        overflow: hidden;
+        filter: brightness(50%);
+    }
+    .intro-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 30px;
+        h3 {
+            font-size: 36pt;
+            font-weight: 500;
+        }
+        p {
+            font-size: 28pt;
+            font-weight: 300;
+        }
+    }
+    h1 {
+        color: white;
+        font-weight: 500;
+    }
+    h2 {
+        color: white;
+        font-weight: 300;
+    }
+}
+
+.parallax {
+    padding: 50px 0;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    .parallax-image {
+        background: url('../../img/Full Textile Factory.jpeg') no-repeat;
+        background-size: cover;
+        position: absolute;
+        width: 100%;
+        height: 140%;
+        top: 0;
+        z-index: 1;
+        opacity: 0.7;
+        filter: brightness(50%);
+    }
+    .parallax-text {
+        width: 90%;
+        margin: 0 auto;
+        max-width: 1140px;
+        position: relative;
+        z-index: 2;
+        h2, p {
+            color: white;
+        }
+    }
+}
+
+.rotating-text {
+    transition: opacity 2s ease-in;
+}
+.fade-in {
+    opacity: 1;
+}
+.fade-out {
+    opacity: 0;
+}
+.move-from-above {
+}
+.move-to-below {
+
 }
