--- a/public/scss/libs/_functions.scss
+++ b/public/scss/libs/_functions.scss
@@ -2,5 +2,5 @@
 /// @param {string} $keys Key(s).
 /// @return {string} Value.
 @function _palette($keys...) {
-	@return val($palette, $keys...);
+	@return map-get($palette, $keys...);
 }
