--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -1,3 +1,5 @@
 <script src="../js/jquery.min.js" type="text/javascript"></script>
+<script src="../js/jquery-ui.min.js" type="text/javascript"></script>
+
 
 <script src="../js/main.js" type="text/javascript"></script>
