--- a/themes/H3-Theme/static/scss/layout/home.scss
+++ b/themes/H3-Theme/static/scss/layout/home.scss
@@ -164,3 +164,18 @@
         }
     }
 }
+
+.rotating-text {
+    transition: opacity 2s ease-in;
+}
+.fade-in {
+    opacity: 1;
+}
+.fade-out {
+    opacity: 0;
+}
+.move-from-above {
+}
+.move-to-below {
+
+}
