Added cards to home page

--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -23,8 +23,8 @@
                  <div class="intro-text">
                      <h1>We are H3</h1>
                      <h2 class="rotating-text">The third iteration of creators</h2>
-                     <h2 class="rotating-text">The second iteration of creators</h2>
-                     <h2 class="rotating-text">The first iteration of creators</h2>
+                     <!--<h2 class="rotating-text">The second iteration of creators</h2>
+                     <h2 class="rotating-text">The first iteration of creators</h2>-->
                 </div>
             </div>
 
@@ -40,15 +40,18 @@
 
             <div class="section">
                 <h2>The Goal</h2>
-                <div class="fade-container row">
-                    <div class="fade-card col">
-                        <h4>100 Jobs</h4>
+                <div id="goal-container" class="fade-container row">
+                    <div id="company-card" class="fade-card col">
+                        <img class="icon" src="img/board-icon.png" alt="">
+                        <h3>10 Companies</h3>
                     </div>
-                    <div class="fade-card col">
-                        <h4>10 Companies</h4>
+                    <div id="job-card" class="fade-card col">
+                        <img class="icon" src="img/people-icon.png" alt="">
+                        <h3>100 Jobs</h3>
                     </div>
-                    <div class="fade-card col">
-                        <h4>5 Years</h4>
+                    <div id="year-card" class="fade-card col">
+                        <img class="icon" src="img/timer-icon.png" alt="">
+                        <h3>5 Years</h3>
                     </div>
                 </div>
             </div>
@@ -58,17 +61,41 @@
                 <h2>Our Activity</h2>
 
                 <div class="fade-container row">
-                    <div class="fade-card col">
-                        <img class="card-image" src="img/SerenDPT.png" alt="">
-                        <h4>Blog 1</h4>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/apple-maps.jpg" alt="">
+                                <h4>DaAaB App Now Supported by Apple</h4>
+                                <h6>Jan 26</h6>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="fade-card col">
-                        <img class="card-image" src="img/SerenDPT.png" alt="">
-                        <h4>Blog 2</h4>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/hive.png" alt="">
+                                <h4>Hive Moves Into H3</h4>
+                                <h6>Dec 15</h6>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="fade-card col">
-                        <img class="card-image" src="img/SerenDPT.png" alt="">
-                        <h4>Blog 3</h4>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/hydroponics.jpg" alt="">
+                                <h4>New Grant Money Support for Hydroponics</h4>
+                                <h6>Nov 12</h6>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -78,17 +105,41 @@
                 <h2>Upcoming Events</h2>
 
                 <div class="fade-container row">
-                    <div class="fade-card col">
-                        <img class="card-image" src="img/SerenDPT.png" alt="">
-                        <h4>DJ Dance Party</h4>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/wpi-iqp.jpg" alt="">
+                                <h4>WPI Project Presentations</h4>
+                                <h6>Dec 7</h6>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="fade-card col">
-                        <img class="card-image" src="img/SerenDPT.png" alt="">
-                        <h4>WPI Project Presentations</h4>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/dj-party.jpg" alt="">
+                                <h4>DJ Dance Party</h4>
+                                <h6>Dec 15</h6>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="fade-card col">
-                        <img class="card-image" src="img/SerenDPT.png" alt="">
-                        <h4>Farm-bot Hackathon</h4>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/farmbot.jpg" alt="">
+                                <h4>Farm-bot Hackathon</h4>
+                                <h6>Jan 7</h6>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -102,6 +153,7 @@
                     <a class="btn btn-light my-2 my-sm-0" href="history" role="button">Learn More</a>
                 </div>
             </div>
+
 
             <div class="section">
                 <h2>Spaces</h2>
@@ -170,22 +222,6 @@
               </a>
 
             </div>
-
-
-
-            <div class="section z1 rel">
-                <h2 id="page-title">Events</h2>
-
-                <span class="fade-container">
-                    <img class="fade-image" src="img/factlet 1.png" alt="">
-
-                        <img class="fade-image" src="img/factlet 2.png" alt="">
-
-                        <img class="fade-image" src="img/factlet 3.png" alt="">
-                </span>
-
-            </div>
-
 
 
 <br><br><br><br><br>
