--- a/themes/H3-Theme/layouts/index.html
+++ b/themes/H3-Theme/layouts/index.html
@@ -81,7 +81,7 @@
                                 <h6>Dec 15</h6>
                             </div>
                             <div class="back">
-                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                                 <h6>Nov 12</h6>
                             </div>
                             <div class="back">
-                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                                 <h6>Dec 7</h6>
                             </div>
                             <div class="back">
-                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                                 <h6>Dec 15</h6>
                             </div>
                             <div class="back">
-                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                                 <h6>Jan 7</h6>
                             </div>
                             <div class="back">
-                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
                             </div>
                         </div>
                     </div>
@@ -157,8 +157,44 @@
 
             <div class="section">
                 <h2>Spaces</h2>
-            </div>
 
+                <div class="fade-container row">
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/Overhead Event.jpeg" alt="">
+                                <h4>Main Hall</h4>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/Conference Room.jpeg" alt="">
+                                <h4>Conference Room</h4>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper">
+                            <div class="front">
+                                <img class="card-image" src="img/dummy/Courtyard.jpeg" alt="">
+                                <h4>Courtyard</h4>
+                            </div>
+                            <div class="back">
+                                <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!--
             <div class="section">
                 <h2>(final section, contact? sdpt?)</h2>
             </div>
@@ -189,13 +225,6 @@
                                     <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
                                   {{ end }}
                               </div>
-                              <!--<div class="carousel-card">
-                                  <h3>{{ .title }}</h3>
-                                  <p>{{ .description }}</p>
-                                  {{ if not (eq .buttontext "")}}
-                                    <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
-                                  {{ end }}
-                              </div>-->
                           </div>
                       {{ else }}
                           <div class="carousel-item">
@@ -224,7 +253,7 @@
             </div>
 
 
-<br><br><br><br><br>
+<br><br><br><br><br>-->
 
 
         </div>
