--- a/themes/H3-Theme/layouts/page/history.html
+++ b/themes/H3-Theme/layouts/page/history.html
@@ -17,7 +17,7 @@
                     <p>{{ . }}</p>
                     {{ end }}
                     {{ range .buttons }}
-                        <a class="btn btn-outline-light my-2 my-sm-0" href="{{ .url }}">{{ .text }}</a>
+                        <a class="btn btn-light my-2 my-sm-0" href="{{ .url }}">{{ .text }}</a>
                     {{ end }}
                 </div>
                 <div class="pic1-cell square-cell">
