--- a/themes/H3-Theme/layouts/page/login.html
+++ b/themes/H3-Theme/layouts/page/login.html
@@ -2,13 +2,16 @@
     <div class="pad-top">
         <h1 class="title">{{ .Title }}</h1>
         <div id="login-pane" class="content">
-            Username:
-            <input type="text">
+            Email:
+            <input id="login-email" type="email" placeholder="Email">
             <br>
             Password:
-            <input type="text">
+            <input id="login-password" type="password" placeholder="Password">
             <br>
-            <input class="btn btn-outline-light my-2 my-sm-0" type="submit" role="button">
+            <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="login()">
+            <!--<br>
+            <br>
+            New user? Register <a href="../register">here</a>.-->
         </div>
     </div>
 {{end}}
