--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -1,5 +1,8 @@
 <script src="../js/jquery.min.js" type="text/javascript"></script>
 <script src="../js/jquery-ui.min.js" type="text/javascript"></script>
 
+<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
 
+
+<script src="../js/login.js" type="text/javascript"></script>
 <script src="../js/main.js" type="text/javascript"></script>
