--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -43,6 +43,21 @@
     padding-right: 20;
 }
 
+#login-btn, #logout-btn, #username, #documents-tab {
+    display: none;
+}
+
+#username {
+    color: _palette(highlight);
+}
+
+#logout-btn:hover {
+    color: _palette(highlight);
+}
+#logout-btn {
+    color: black;
+}
+
 
 
 // OLD FULLSCREEN MENU ***
