--- a/themes/H3-Theme/layouts/page/test.html
+++ b/themes/H3-Theme/layouts/page/test.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
-    <h1 id="page-title">{{ .Title }}</h1>
-
-    Content:
-    <h2>{{ .Content }}</h2>
-    <p>{{ .Content }}</p>
+<div class="pad-top">
+    <h1 class="title">{{ .Title }}</h1>
+    <div id="load-test" class="content">
+        {{ .Content }}
+    </div>
+</div>
 {{end}}
