--- a/themes/H3-Theme/layouts/partials/scripts.html
+++ b/themes/H3-Theme/layouts/partials/scripts.html
@@ -4,5 +4,6 @@
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
 
 
+<script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
 <script src="../js/main.js" type="text/javascript"></script>
