--- a/themes/H3-Theme/layouts/partials/footer.html
+++ b/themes/H3-Theme/layouts/partials/footer.html
@@ -3,20 +3,13 @@
     <div class="row">
 
         <div class="col">
-            <h4>SerenDPT Srl</h4>
-            <h5>Società Benefit</h5>
-            <p>P.IVA: 04396950273</p>
-            <br>
-
-            <h5>SEDE LEGALE:</h5>
-            <p>San Marco, 1808<br>
-            30124 – Venezia</p>
-            <br>
-
-            <h5>SEDE OPERATIVA:</h5>
+            <h4>Location</h4>
+            <h5>H3 (Ex-Herion)</h5>
             <p>Campo SS. Cosma e Damiano, 624-625<br>
             Giudecca<br>
-            30133 – Venezia</p>
+            30133 – Venice - Italy</p>
+            <br>
+
         </div>
         <div class="col">
             <div class="sdpt right">
