--- a/themes/H3-Theme/static/scss/style.scss
+++ b/themes/H3-Theme/static/scss/style.scss
@@ -1,14 +1,12 @@
 @import 'libs/vars.scss';
 @import 'libs/functions.scss';
-@import 'libs/bootstrap.scss';
 
 
 @import 'base/page.scss';
 @import 'base/typography.scss';
 
-@import 'components/icon.scss';
-@import 'components/textbox.scss';
 @import 'components/button.scss';
+@import 'components/flipcard.scss';
 
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
