--- a/public/scss/layout/_footer.scss
+++ b/public/scss/layout/_footer.scss
@@ -4,9 +4,11 @@
     background-color: #1a1a1a;
     width: 100%;
     font-family: ('Source Sans Pro', Helvetica, sans-serif);
+    color: white;
     position: relative;
     z-index: 999;
     p {
+        color: white;
         font-size: 14;
     }
     h5 {
