--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -1,92 +1,33 @@
 .navbar {
-    height: 50px;
+    height: 60px;
     width: 100%;
-    background-color: rgba(26, 26, 26, 0.8); // 26 = #1a
-    img {
-        height: 30px;
-        margin: 10px;
-    }
-}
-
-#header {
-    margin: 0;
-    padding: 0;
-    background-color: rgba(26, 26, 26, 0.8);
-    height: 50px;
-    position: fixed;
-    width: 100%;
-    font-family: ('Source Sans Pro', Helvetica, sans-serif);
-    text-transform: uppercase;
-    letter-spacing: 0.15em;
+    background-color: rgba(26, 26, 26, 0.9); // 26 = #1a
 
     img {
         height: 30px;
         margin: 10px;
     }
-
-    a {
-        margin-top: 15;
+    .navbar-nav a {
+        letter-spacing: 0.1em;
+    }
+    #login-btn, #logout-btn, #username, #documents-tab {
+        display: none;
     }
 
-}
-
-#main-nav-div {
-    display: inline-block;
-    position: fixed;
-    margin-top: 15px;
-    margin-left: 300px;
-}
-.main-nav {
-    margin-top: 0;
-    padding-top: 0;
-    padding-left: 20;
-    padding-right: 20;
-}
-
-#login-btn, #logout-btn, #username, #documents-tab {
-    display: none;
-}
-
-#username {
-    color: _palette(highlight);
-}
-
-#logout-btn:hover {
-    color: _palette(highlight);
-}
-#logout-btn {
-    color: black;
-}
-
-
-
-// OLD FULLSCREEN MENU ***
-#menuBtn{
-    float: right;
-    margin-right: 10px;
-}
-#menuClose {
-    float: right;
-    margin-right: 10px;
-    margin-top: 10px;
-    font-size: 20pt;
-}
-
-nav#menu {
-    visibility: hidden;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(26, 26, 26, 0.8);
-    ul {
-        margin-top: 100;
-        font-family: ('Source Sans Pro', Helvetica, sans-serif);
-		text-transform: uppercase;
-        letter-spacing: 0.15em;
-        text-align: center;
-        list-style-type: none;
+    #username {
+        color: _palette(highlight);
     }
-    li {
-        margin: 50;
+
+    #logout-btn:hover {
+        color: _palette(highlight);
     }
+    #logout-btn {
+        color: black;
+    }
+}
+
+.scrolled::before{
+    content:"";
+    opacity:1;
+    transition:0.3s ease-in-out;
 }
