Added raise card functionality to spaces

--- a/themes/H3-Theme/layouts/page/spaces.html
+++ b/themes/H3-Theme/layouts/page/spaces.html
@@ -6,16 +6,9 @@
 
                 <div class="fade-container row">
                     {{ range .Params.spaces }}
-                        <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                            <div class="flipper">
-                                <div class="front">
-                                    <img class="card-image" src="{{ .image }}" alt="">
-                                    <h4>{{ .name }}</h4>
-                                </div>
-                                <div class="back">
-                                    <p>{{ .description }}</p>
-                                </div>
-                            </div>
+                        <div class="card-temp fade-card col">
+                            <img class="card-image" src="{{ .image }}" alt="">
+                            <h4>{{ .name }}</h4>
                         </div>
                     {{ end }}
 
