--- a/themes/H3-Theme/static/scss/layout/spaces.scss
+++ b/themes/H3-Theme/static/scss/layout/spaces.scss
@@ -8,7 +8,6 @@
 
 #eventForm {
     * {
-
     }
     p {
         font-weight: 300;
@@ -47,4 +46,17 @@
 .clock {
     height: 200px;
     width: auto;
+}
+
+
+.card-temp {
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    transition: transform 0.5s ease-out;
+    &:hover {
+        background-color: green;
+        transform: translate(0px, -30px);
+    }
 }
