--- a/themes/H3-Theme/static/scss/libs/_vars.scss
+++ b/themes/H3-Theme/static/scss/libs/_vars.scss
@@ -10,10 +10,10 @@ $font: (
 $palette: (
 	bg:					#FFFFFF,
 	bg-alt:				#ECF0F1,
-	fg:					#2C3E50,
+	fg:					#111111,
 	fg-alt:				#3498DB,
-	border:				#2C3E50,
-	border-bg:			#2C3E50,
+	border:				#111111,
+	border-bg:			#111111,
 	highlight:			#FFCC00,
 	accent1:			#FFCC00
 );
