--- a/themes/H3-Theme/static/scss/style.scss
+++ b/themes/H3-Theme/static/scss/style.scss
@@ -6,7 +6,7 @@
 @import 'base/typography.scss';
 
 @import 'components/button.scss';
-@import 'components/flipcard.scss';
+@import 'components/card.scss';
 
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
