--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -5,8 +5,11 @@
 @import 'base/page.scss';
 @import 'base/typography.scss';
 
+@import 'components/block.scss';
 @import 'components/button.scss';
-@import 'components/flipcard.scss';
+@import 'components/card.scss';
+@import 'components/carousel.scss';
+@import 'components/icon.scss';
 
 @import 'layout/header.scss';
 @import 'layout/footer.scss';
