--- a/themes/H3-Theme/layouts/page/events.html
+++ b/themes/H3-Theme/layouts/page/events.html
@@ -1,24 +1,101 @@
 {{ define "main" }}
-    <div id="page-banner">
-        <img id="page-image" src="../../../img/history/banner.jpeg" alt="">
-        <h1 id="page-title">{{ .Title }}</h1>
-    </div>
-    <div class="content section">
-        <div class="fade-container row">
-            {{ range .Params.events }}
-                <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                    <div class="flipper">
-                        <div class="front">
-                            <img class="card-image" src="{{ .image }}" alt="">
-                            <h4>{{ .name }}</h4>
-                            <h6>{{ .date }}</h6>
-                        </div>
-                        <div class="back">
+
+    <div id="carousel" class="carousel" data-ride="carousel">
+
+        <ol class="carousel-indicators">
+            {{ range $index, $element := .Site.Params.carousel }}
+                {{ if eq $index 0 }}
+                    <li data-target="#carousel" data-slide-to="{{ $index }}" class="active"></li>
+                {{ else }}
+                    <li data-target="#carousel" data-slide-to="{{ $index }}"></li>
+                {{ end }}
+            {{ end }}
+        </ol>
+
+        <div class="carousel-inner">
+            {{ range $index, $element := .Site.Params.carousel }}
+                {{ if eq $index 0 }}
+                    <div class="carousel-item active">
+                        <img class="d-block tester3" src="/img/{{ .image }}"  alt="">
+                        <div class="carousel-text">
+                            <h3>{{ .title }}</h3>
+                            <br>
                             <p>{{ .description }}</p>
+                            {{ if not (eq .buttontext "")}}
+                                <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
+                            {{ end }}
                         </div>
                     </div>
-                </div>
+                {{ else }}
+                    <div class="carousel-item">
+                        <img class="d-block tester3" src="/img/{{ .image }}"  alt="">
+                            <div class="carousel-text">
+                                <h3>{{ .title }}</h3>
+                                <p>{{ .description }}</p>
+                                {{ if not (eq .buttontext "")}}
+                                    <a class="btn btn-light my-2 my-sm-0" href="{{ .buttonurl | absURL }}" role="button">{{ .buttontext }}</a>
+                                {{ end }}
+                            </div>
+                    </div>
+                {{ end }}
             {{ end }}
         </div>
+
+        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+
+    </div>
+
+    <div class="scroll-container">
+        <i class="fas fa-chevron-down scroll"></i>
+    </div>
+
+
+    <div class="content section">
+        <h2>Upcoming Events</h2>
+        {{ range .Params.events }}
+            <div class="block-grid">
+                <div class="img-cell">
+                    <img class="card-image" src="{{ .image }}" alt="">
+                </div>
+                <div class="title-cell">
+                    <h4>{{ .name }}</h4>
+                </div>
+                <div class="date-cell">
+                    <h6>{{ .date }}</h6>
+                </div>
+                <div class="description-cell">
+                    <p>{{ .description }}</p>
+                </div>
+            </div>
+        {{ end }}
+    </div>
+
+    <a class="btn btn-light my-2 my-sm-0" href="">Book Now</a>
+
+    <div class="content section">
+        <h2>Past Events</h2>
+        {{ range .Params.events }}
+            <div class="block-grid">
+                <div class="img-cell">
+                    <img class="card-image" src="{{ .image }}" alt="">
+                </div>
+                <div class="title-cell">
+                    <h4>{{ .name }}</h4>
+                </div>
+                <div class="date-cell">
+                    <h6>{{ .date }}</h6>
+                </div>
+                <div class="description-cell">
+                    <p>{{ .description }}</p>
+                </div>
+            </div>
+        {{ end }}
     </div>
 {{end}}
